k8s/api-gateway-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      labels:
        app: api-gateway-app
    spec:
      containers:
        - name: api-gateway-app
          image: ramachandrampm/argocd-api-gateway:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: dev
spec:
  selector:
    app: api-gateway-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
