k8s/ordersms-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersms-deployment
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ordersms-app
  template:
    metadata:
      labels:
        app: ordersms-app
    spec:
      containers:
        - name: ordersms-app
          image: ramachandrampm/argocd-ordersms:latest
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ordersms-service
  namespace: dev
spec:
  selector:
    app: ordersms-app
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
