k8s/userms-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userms-deployment
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userms-app
  template:
    metadata:
      labels:
        app: userms-app
    spec:
      containers:
        - name: userms-app
          image: ramachandrampm/argocd-userms:4
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: userms-service
  namespace: dev
spec:
  selector:
    app: userms-app
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
